--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     padding: 10px;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0px 1px 5px 0.5px #969696;
 }
 
 .main-nav img
@@ -36,7 +37,7 @@
 
 .nav-link
 {
-    margin-right: 25px;
+    margin-right: 40px;
 }
 
 .nav-link a:hover
@@ -44,3 +45,4 @@
     transition: 0.5s ease;
     color: orange;
 }
+
