--- a/css/quiz-style.css
+++ b/css/quiz-style.css
@@ -11,23 +11,30 @@ body{
 
 .quiz-container{
     display: flex;
-    position: relative;
     justify-content: flex-end;
     flex-direction: column;
     height: 100%;
     transform: translateY(10%);
     width: 100vw;
 }
+.img-div{
+    transform: translate(30%, -100%);
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 
 .start-quiz-btn{
     width: 354px;
-    height: 80px;
+    height: 65px;
     background: #F27127;
     border: none;
     color: white;
     font-weight: bold;
     font-size: 41px;
     border-radius: 49px;
+    text-decoration: none;
 }
 
 .input-and-btn{
@@ -46,13 +53,20 @@ body{
     height: 30px;
 }
 
-.container-entire{
-    display: flex;
-    justify-content: center;
+.container-question{
+    transform: translateY(10%);
+    height: 100%;
 }
 
+.question-count, .dummy, .answer{
+    margin: 40px;
+    padding: 10px;
+}
 
-.img-div{
-    display: flex;
-    align-items: flex-end;
+.question-count{
+    font-size: 50px;
+}
+
+.dummy{
+    font-size: 35px;
 }
