--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,27 @@ a
     color: orange;
 }
 
+::-webkit-scrollbar
+{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track 
+{
+    background: #a0a0a0;
+}
+
+::-webkit-scrollbar-thumb 
+{
+    background: #03A66A;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover 
+{
+    background: #027c4f;
+}
+
 .start-quiz-container
 {
     width: 75%;
@@ -64,7 +85,8 @@ a
     left: 50%;
     color: white;
     transform: translate(-50%, -50%);
-    z-index: 1;}
+    z-index: 1;
+}
 
 .start-quiz-container a
 {
@@ -114,7 +136,7 @@ a
     margin-bottom: 17.5px;
 }
 
-.about-container img:nth-of-type(1)
+.about-container img
 {
     position: absolute;
     width: 400px;
@@ -122,16 +144,74 @@ a
     right: 200px;
 }
 
-.about-container img:nth-of-type(2)
+.a img
+{
+    width: 50px;
+    height: 75px;
+    bottom: 100px;
+}
+
+.about-pointer-right img
+{
+    right: 100px;
+}
+
+.about-pointer-left img
 {
     transform: scaleX(-1);
-    position: absolute;
     left: 100px;
-    bottom: 35%;
 }
-.about-container img:nth-of-type(3)
+
+.contact-container
+{
+    width: 800px;
+    height: 600px;
+    background: #a2a2a2;
+    position: absolute;
+    border-radius: 10px;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: -195vh;
+}
+
+.article-history
 {
     position: absolute;
-    right: 100px;
-    bottom: 35%;
+    bottom: -97vh;
+    width: 800px;
+    left: 50%;
+    transform: translate(-50%);
+    height: 250px;
+}
+
+.main-footer
+{
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    bottom: -225vh;
+    color: white;
+    background: #03A66A;
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-side-footer
+{
+    width: 250px;
+    margin: 10px;
+}
+
+.middle-side-footer
+{
+    width: 250px;
+    margin: 10px;
+
+}
+
+.right-side-footer
+{
+    width: 150px;
+    margin: 10px;
+
 }
