--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a
 
 ::-webkit-scrollbar
 {
-    width: 10px;
+    width: 1.5vh;
 }
 
 ::-webkit-scrollbar-track 
@@ -165,13 +165,13 @@ a
 .contact-container
 {
     width: 800px;
-    height: 600px;
+    height: 800px;
     background: #a2a2a2;
     position: absolute;
     border-radius: 10px;
     left: 50%;
     transform: translate(-50%);
-    bottom: -192vh;
+    bottom: -200vh;
 }
 
 .article-history
@@ -182,6 +182,43 @@ a
     left: 50%;
     transform: translate(-50%);
     height: 250px;
+}
+
+.contact-container 
+{
+    margin: 50px auto;
+    width: 50%;
+    border-radius: 4px;
+    background-color: #b8b8b8;
+    padding: 10px;
+    height: 595px;
+    width: 650px;
+}
+
+input[type="text"], textarea 
+{
+    width: 96%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-top: 5px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    resize: vertical;
+}
+  
+input[type="submit"] 
+{
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+  
+input[type="submit"]:hover 
+{
+    background-color: #04724a;
 }
 
 .main-footer
