--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ a
 {
     width: 800px;
     height: 325px;
-    top: 675px;
+    top: 100vh;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
@@ -162,22 +162,10 @@ a
     left: 100px;
 }
 
-.contact-container
-{
-    width: 800px;
-    height: 800px;
-    background: #a2a2a2;
-    position: absolute;
-    border-radius: 10px;
-    left: 50%;
-    transform: translate(-50%);
-    bottom: -200vh;
-}
-
 .article-history
 {
     position: absolute;
-    bottom: -97vh;
+    bottom: -90vh;
     width: 800px;
     left: 50%;
     transform: translate(-50%);
@@ -191,6 +179,11 @@ a
     border-radius: 4px;
     background-color: #b8b8b8;
     padding: 10px;
+    position: absolute;
+    border-radius: 10px;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: -192.5vh;
     height: 595px;
     width: 650px;
 }
@@ -226,7 +219,7 @@ input[type="submit"]:hover
     position: absolute;
     width: 100%;
     height: 150px;
-    bottom: -225vh;
+    bottom: -215vh;
     color: white;
     background: #03A66A;
     display: flex;
