--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ a
 .start-quiz-container a
 {
     background: #03A66A;
-    height: 40px;
+    height: 22px;
     width: 125px;
     text-align: center;
     position: absolute;
@@ -165,7 +165,7 @@ a
 .article-history
 {
     position: absolute;
-    bottom: -90vh;
+    bottom: -70vh;
     width: 800px;
     left: 50%;
     transform: translate(-50%);
@@ -183,9 +183,13 @@ a
     border-radius: 10px;
     left: 50%;
     transform: translate(-50%);
-    bottom: -192.5vh;
-    height: 595px;
+    bottom: -150vh;
     width: 650px;
+}
+
+.contact-container h2{
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 input[type="text"], textarea 
@@ -207,6 +211,7 @@ input[type="submit"]
     border: none;
     cursor: pointer;
     border-radius: 5px;
+    transition: 1s;
 }
   
 input[type="submit"]:hover 
@@ -219,7 +224,7 @@ input[type="submit"]:hover
     position: absolute;
     width: 100%;
     height: 150px;
-    bottom: -215vh;
+    bottom: -165vh;
     color: white;
     background: #03A66A;
     display: flex;
@@ -313,4 +318,9 @@ input[type="submit"]:hover
 
   #nav-over-ons{
       cursor: pointer; 
+  }
+
+  #pageJump{
+      position: absolute;
+      bottom: 120px;
   }
