--- a/css/quiz-style.css
+++ b/css/quiz-style.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     height: 100vh;
-    overflow: hidden;
+    overflow-x:hidden;
 }
 
 .quiz-title{
@@ -25,7 +25,7 @@ body{
 }
 
 
-.start-quiz-btn{
+.start-quiz-btn , .end-container button{
     width: 354px;
     height: 65px;
     background: #F27127;
@@ -33,6 +33,18 @@ body{
     color: white;
     font-weight: bold;
     font-size: 41px;
+    border-radius: 49px;
+    text-decoration: none;
+}
+
+.btnSubmitQuestion{
+    width: 200px;
+    height: 50px;
+    background: #F27127;
+    border: none;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
     border-radius: 49px;
     text-decoration: none;
 }
@@ -55,7 +67,6 @@ body{
 
 .container-question{
     transform: translateY(10%);
-    height: 100%;
 }
 
 .question-count, .dummy, .answer{
@@ -81,3 +92,23 @@ body{
 .main-nav{
     position: relative;
 }
+
+.main-footer{
+    bottom: -10vh;
+}
+
+.end-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.end-container h1{
+    font-size: 55px;
+}
+
+
+
