--- a/css/style.css
+++ b/css/style.css
@@ -324,3 +324,7 @@ input[type="submit"]:hover
       position: absolute;
       bottom: 120px;
   } 
+
+  .contact-container h3{
+      text-align: center;
+  }
