--- a/css/style.css
+++ b/css/style.css
@@ -183,13 +183,13 @@ a
     border-radius: 10px;
     left: 50%;
     transform: translate(-50%);
-    bottom: -160vh;
+    bottom: -170vh;
     width: 650px;
 }
 
-.contact-container h2 {
+.contact-container h3 {
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
 .contact-container input[type="text"], textarea , input[type="email"], .contact-container input[type="number"]
@@ -224,7 +224,7 @@ input[type="submit"]:hover
     position: absolute;
     width: 100%;
     height: 150px;
-    bottom: -180vh;
+    bottom: -190vh;
     color: white;
     background: #03A66A;
     display: flex;
@@ -327,4 +327,15 @@ input[type="submit"]:hover
 
   .contact-container h3{
       text-align: center;
+  }
+
+  .start-quiz-container .homeInfo{
+      text-align: center;
+      transform: translateY(550%);
+      font-weight: bold;
+      font-size: 25px;
+  }
+
+  .start-quiz-container h1{
+      font-size: 50px;
   }
